--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
             "email": "anzhengchao@gmail.com"
         }
     ],
+    "bin": ["bin/easywechat"],
     "autoload": {
         "psr-4": {
             "EasyWeChat\\Console\\": "./src"
